Update for API 11

--- a/SproutTracker/SproutTracker.csproj
+++ b/SproutTracker/SproutTracker.csproj
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="Dalamud.Plugin.Bootstrap.targets"/>
-
+<Project Sdk="Dalamud.NET.Sdk/11.0.0">
     <PropertyGroup>
-        <Version>1.0.0.1</Version>
+        <Version>1.0.0.2</Version>
     </PropertyGroup>
 </Project>
